update in test