@@ -1,18 +1,5 @@
 package com.easystay.realestaterental.service;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.*;
-
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.Pageable;
-
 import com.easystay.realestaterental.dto.BookingDTO;
 import com.easystay.realestaterental.entity.Booking;
 import com.easystay.realestaterental.entity.Guest;
@@ -24,15 +11,27 @@ import com.easystay.realestaterental.mapper.BookingMapper;
 import com.easystay.realestaterental.repository.BookingRepository;
 import com.easystay.realestaterental.repository.GuestRepository;
 import com.easystay.realestaterental.repository.PropertyRepository;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.Collections;
-import java.util.List;
 import java.util.Optional;
 
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.Mockito.*;
+
 @ExtendWith(MockitoExtension.class)
-public class BookingServiceTest {
+class BookingServiceTest {
 
     @Mock
     private BookingRepository bookingRepository;
@@ -46,10 +45,10 @@ public class BookingServiceTest {
     @InjectMocks
     private BookingService bookingService;
 
-    private Booking booking;
     private BookingDTO bookingDTO;
-    private Guest guest;
+    private Booking booking;
     private Property property;
+    private Guest guest;
 
     @BeforeEach
     void setUp() {
@@ -63,8 +62,8 @@ public class BookingServiceTest {
         booking.setId(1L);
         booking.setGuest(guest);
         booking.setProperty(property);
-        booking.setCheckInDate(LocalDate.now().plusDays(1));
-        booking.setCheckOutDate(LocalDate.now().plusDays(3));
+        booking.setCheckInDate(LocalDate.now());
+        booking.setCheckOutDate(LocalDate.now().plusDays(2));
         booking.setStatus(BookingStatus.PENDING);
         booking.setTotalPrice(BigDecimal.valueOf(200));
 
@@ -72,39 +71,17 @@ public class BookingServiceTest {
         bookingDTO.setId(1L);
         bookingDTO.setGuestId(1L);
         bookingDTO.setPropertyId(1L);
-        bookingDTO.setCheckInDate(LocalDate.now().plusDays(1));
-        bookingDTO.setCheckOutDate(LocalDate.now().plusDays(3));
+        bookingDTO.setCheckInDate(LocalDate.now());
+        bookingDTO.setCheckOutDate(LocalDate.now().plusDays(2));
         bookingDTO.setStatus(BookingStatus.PENDING);
         bookingDTO.setTotalPrice(BigDecimal.valueOf(200));
     }
 
     @Test
-    void testUpdateBookingStatus_Success() {
-        when(bookingRepository.findById(1L)).thenReturn(Optional.of(booking));
-        when(bookingRepository.save(any(Booking.class))).thenAnswer(invocation -> {
-            Booking savedBooking = invocation.getArgument(0);
-            savedBooking.setStatus(BookingStatus.CONFIRMED);
-            return savedBooking;
-        });
-        when(bookingMapper.toDTO(any(Booking.class))).thenAnswer(invocation -> {
-            Booking savedBooking = invocation.getArgument(0);
-            bookingDTO.setStatus(savedBooking.getStatus());
-            return bookingDTO;
-        });
-
-        BookingDTO result = bookingService.updateBookingStatus(1L, BookingStatus.CONFIRMED);
-
-        assertNotNull(result);
-        assertEquals(BookingStatus.CONFIRMED, result.getStatus());
-        verify(bookingRepository).save(booking);
-    }
-
-    @Test
-    void testCreateBooking_Success() {
-        when(propertyRepository.findById(1L)).thenReturn(Optional.of(property));
-        when(guestRepository.findById(1L)).thenReturn(Optional.of(guest));
-        when(bookingRepository.findOverlappingBookings(anyLong(), any(), any(), any()))
-                .thenReturn(Collections.emptyList());
+    void createBooking_ShouldReturnBookingDTO() {
+        when(propertyRepository.findById(anyLong())).thenReturn(Optional.of(property));
+        when(guestRepository.findById(anyLong())).thenReturn(Optional.of(guest));
+        when(bookingRepository.findOverlappingBookings(anyLong(), any(), any(), anyList())).thenReturn(Collections.emptyList());
         when(bookingMapper.toEntity(any(BookingDTO.class))).thenReturn(booking);
         when(bookingRepository.save(any(Booking.class))).thenReturn(booking);
         when(bookingMapper.toDTO(any(Booking.class))).thenReturn(bookingDTO);
@@ -112,88 +89,85 @@ public class BookingServiceTest {
         BookingDTO result = bookingService.createBooking(bookingDTO);
 
         assertNotNull(result);
-        assertEquals(1L, result.getId());
-        assertEquals(BookingStatus.PENDING, result.getStatus());
-        verify(bookingRepository).save(any(Booking.class));
+        assertEquals(bookingDTO, result);
     }
 
     @Test
-    void testCreateBooking_Conflict() {
-        when(propertyRepository.findById(1L)).thenReturn(Optional.of(property));
-        when(guestRepository.findById(1L)).thenReturn(Optional.of(guest));
-        when(bookingRepository.findOverlappingBookings(anyLong(), any(), any(), any()))
-                .thenReturn(List.of(booking));
+    void createBooking_OverlappingBookings_ShouldThrowBookingConflictException() {
+        when(propertyRepository.findById(anyLong())).thenReturn(Optional.of(property));
+        when(guestRepository.findById(anyLong())).thenReturn(Optional.of(guest));
+        when(bookingRepository.findOverlappingBookings(anyLong(), any(), any(), anyList())).thenReturn(Collections.singletonList(booking));
 
         assertThrows(BookingConflictException.class, () -> bookingService.createBooking(bookingDTO));
     }
 
     @Test
-    void testGetBooking_Success() {
-        when(bookingRepository.findById(1L)).thenReturn(Optional.of(booking));
-        when(bookingMapper.toDTO(booking)).thenReturn(bookingDTO);
+    void getBooking_ShouldReturnBookingDTO() {
+        when(bookingRepository.findById(anyLong())).thenReturn(Optional.of(booking));
+        when(bookingMapper.toDTO(any(Booking.class))).thenReturn(bookingDTO);
 
         BookingDTO result = bookingService.getBooking(1L);
 
         assertNotNull(result);
-        assertEquals(1L, result.getId());
+        assertEquals(bookingDTO, result);
     }
 
     @Test
-    void testGetBooking_NotFound() {
-        when(bookingRepository.findById(1L)).thenReturn(Optional.empty());
-
-        assertThrows(ResourceNotFoundException.class, () -> bookingService.getBooking(1L));
-    }
-
-    @Test
-    void testGetBookingsByGuest() {
-        Page<Booking> bookingPage = new PageImpl<>(List.of(booking));
-        when(bookingRepository.findByGuestId(1L, Pageable.unpaged())).thenReturn(bookingPage);
-        when(bookingMapper.toDTO(booking)).thenReturn(bookingDTO);
+    void getBookingsByGuest_ShouldReturnPageOfBookingDTOs() {
+        Page<Booking> bookingPage = new PageImpl<>(Collections.singletonList(booking));
+        when(bookingRepository.findByGuestId(anyLong(), any(Pageable.class))).thenReturn(bookingPage);
+        when(bookingMapper.toDTO(any(Booking.class))).thenReturn(bookingDTO);
 
         Page<BookingDTO> result = bookingService.getBookingsByGuest(1L, Pageable.unpaged());
 
-        assertFalse(result.getContent().isEmpty());
-        assertEquals(1, result.getContent().size());
-        assertEquals(1L, result.getContent().get(0).getId());
+        assertNotNull(result);
+        assertEquals(1, result.getTotalElements());
+        assertEquals(bookingDTO, result.getContent().get(0));
     }
 
     @Test
-    void testGetBookingsByProperty() {
-        Page<Booking> bookingPage = new PageImpl<>(List.of(booking));
-        when(bookingRepository.findByPropertyId(1L, Pageable.unpaged())).thenReturn(bookingPage);
-        when(bookingMapper.toDTO(booking)).thenReturn(bookingDTO);
+    void updateBookingStatus_ShouldReturnUpdatedBookingDTO() {
+        // Arrange
+        when(bookingRepository.findById(anyLong())).thenReturn(Optional.of(booking));
 
-        Page<BookingDTO> result = bookingService.getBookingsByProperty(1L, Pageable.unpaged());
+        // Simuler la mise à jour du statut
+        Booking updatedBooking = new Booking();
+        updatedBooking.setStatus(BookingStatus.CONFIRMED);
+        when(bookingRepository.save(any(Booking.class))).thenReturn(updatedBooking);
 
-        assertFalse(result.getContent().isEmpty());
-        assertEquals(1, result.getContent().size());
-        assertEquals(1L, result.getContent().get(0).getId());
+        // Simuler le mapper pour renvoyer un DTO avec le statut mis à jour
+        BookingDTO updatedBookingDTO = new BookingDTO();
+        updatedBookingDTO.setStatus(BookingStatus.CONFIRMED);
+        when(bookingMapper.toDTO(any(Booking.class))).thenReturn(updatedBookingDTO);
+
+        // Act
+        BookingDTO result = bookingService.updateBookingStatus(1L, BookingStatus.CONFIRMED);
+
+        // Assert
+        assertNotNull(result);
+        assertEquals(BookingStatus.CONFIRMED, result.getStatus());
+
+        // Vérifier que la méthode save a été appelée avec le bon statut
+        verify(bookingRepository).save(argThat(booking ->
+                booking.getStatus() == BookingStatus.CONFIRMED
+        ));
     }
 
     @Test
-    void testUpdateBookingStatus_NotFound() {
-        when(bookingRepository.findById(1L)).thenReturn(Optional.empty());
-
-        assertThrows(ResourceNotFoundException.class,
-                () -> bookingService.updateBookingStatus(1L, BookingStatus.CONFIRMED));
-    }
-
-    @Test
-    void testCancelBooking_Success() {
-        when(bookingRepository.findById(1L)).thenReturn(Optional.of(booking));
+    void cancelBooking_ShouldUpdateBookingStatus() {
+        when(bookingRepository.findById(anyLong())).thenReturn(Optional.of(booking));
         when(bookingRepository.save(any(Booking.class))).thenReturn(booking);
 
-        bookingService.cancelBooking(1L);
-
+        assertDoesNotThrow(() -> bookingService.cancelBooking(1L));
         assertEquals(BookingStatus.CANCELED, booking.getStatus());
-        verify(bookingRepository).save(booking);
     }
 
     @Test
-    void testCancelBooking_NotFound() {
-        when(bookingRepository.findById(1L)).thenReturn(Optional.empty());
+    void isBookingOwner_ShouldReturnTrue() {
+        when(bookingRepository.findById(anyLong())).thenReturn(Optional.of(booking));
 
-        assertThrows(ResourceNotFoundException.class, () -> bookingService.cancelBooking(1L));
+        boolean result = bookingService.isBookingOwner(1L, 1L);
+
+        assertTrue(result);
     }
 }
